# api-server

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
migrations/: 0001_create_coin.sql  0002_create_achivement.sql  0002_create_curve.sql  0003_create_account.sql  0003_create_token.sql  0004_create_account_session.sql  0005_create_balance.sql  0005_create_curve.sql  0006_create_balance.sql  0006_create_swap.sql  0007_create_follow.sql  0008_create_account_like.sql  0009_create_swap.sql  0009_create_thread.sql  0010_create_thread.sql  0011_create_chart.sql  0011_create_thread_like.sql  0012_create_chart.sql  0012_create_coin_reply_count.sql  0013_create_coin_trigger.sql  0013_create_king.sql  0013_create_token_reply_count.sql  0014_create_achivement.sql  0014_create_king.sql  0015_create_balance_trigger.sql  0016_create_curve_trigger.sql  0017_create_swap_trigger.sql  0018_create_coin_reply_count_trigger.sql  0019_create_thread_trigger.sql  0020_create_chart_trigger.sql  0021_create_token_trigger.sql
src/: constant.rs  lib.rs  main.rs  utils.rs
src/db/postgres/: mod.rs
src/db/postgres/controller/: coin.rs  coinpage.rs  info.rs  message.rs  mod.rs  new_content.rs  order.rs  (+2 more)
src/db/redis/: mod.rs
src/event/: coin.rs  mod.rs  new_content.rs  order.rs  token.rs
src/server/: mod.rs  result.rs  state.rs
src/server/routes/: mod.rs
src/server/socket/: json_rpc.rs  mod.rs  subscribe.rs
src/types/: chart_type.rs  mod.rs  model.rs  profile.rs
src/types/event/: capture.rs  coin.rs  coin_message.rs  mod.rs  new_content.rs  order.rs  token.rs  wrapper.rs
(+10 files in other folders)
