[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
#ERROR
anyhow = "1.0.86"

##POSTGRES
sqlx = { version = "0.8.0", features = [
    "runtime-tokio",
    "postgres",
    "tls-rustls",
    "bigdecimal",
    "time",
    "chrono",
    "json",
] }

#REDIS
redis = { version = "0.25.4", features = [
    "tokio-comp",
    "cluster-async",
    "tokio-rustls-comp",
    "json",
] }
#SERDE
serde = "1.0.203"
serde_json = "1.0.117"


#LOG
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

#ASYNC
tokio = { version = "1.38.0", features = ["full"] }

#SERVER
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
#ENV
dotenv = "0.15.0"
futures = "0.3.30"


#SWAGGER
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }

#TIME
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4.5", features = ["serde"] }
lazy_static = "1.5.0"
